refactor: Split WGSL shaders into separate fragment and vertex files, remove several post-processing shaders, and update rendering backend.